GNOME Bugzilla – Bug 739934
Epiphany supports WebP but doesn't claim support for it.
Last modified: 2016-04-08 14:08:44 UTC
Steps to reproduce: 1. download any webp image, e.g. by downloading images from google+ using epiphany. Save the image to a local folder. 2. open epiphany 3. open the file chooser to choose a file to open. Select supported file formats (this is the default). Result: WebP images are not shown Epiphany supports WebP images so epiphany should display them in its file chooser as supported file format.
To fix this issue, just add `image/webp` to the MimeType field in epiphany.desktop, this mime type is also recognized by the `file` util from BSD, shipped with most linux and BSD distros.
(In reply to Christian Stadelmann from comment #1) > To fix this issue, just add `image/webp` to the MimeType field in > epiphany.desktop, this mime type is also recognized by the `file` util from > BSD, shipped with most linux and BSD distros. I don't think we should do that; we don't want to suggest Epiphany as an application to handle WebP files, that's the job of image viewers. We just want to allow opening them from the open file dialog.
Fixed in f260745