file-chooser: Support WebP files

It's not really sustainable to add every supported file type here
manually, we need a better solution. But as a quick fix, add WebP
support here.

https://bugzilla.gnome.org/show_bug.cgi?id=739934